src/z80asm/z80asm2/t/40-syntax/expected/call_oz_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/call_oz_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/call_oz_01.asm...
t/40-syntax/input/call_oz_01.asm:1:1: error: Unterminated expression after "call_oz"
    call_oz
    ^
t/40-syntax/input/call_oz_01.asm:2:1: error: Unterminated expression after "call_oz"
    call_oz ,
    ^
t/40-syntax/input/call_oz_01.asm:3:14: error: Unexpected token: ","
    call_oz 1+2*3, 
                 ^
Program
    CallOzStmt
        Location: t/40-syntax/input/call_oz_01.asm:4:1
        Expression:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
    CallOzStmt
        Location: t/40-syntax/input/call_oz_01.asm:5:1
        Expression:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: $100
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
